# chainguard-ai

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
contracts/examples/: SecureVault.sol  VulnerableVault.sol
frontend/static/: app.js  style.css
frontend/templates/: index.html
src/: cli.py
src/analyzer/: engine.py  patterns.py
src/api/: app.py  routes.py
src/blockchain/: chain.py
src/models/: vulnerability.py
tests/: test_analyzer.py  test_api.py  test_blockchain.py
